Fix spacing on no connection

--- a/style.css
+++ b/style.css
@@ -171,6 +171,10 @@ body.movingUI #extensionTopBar {
     font-size: calc(var(--mainFontSize)* 0.85);
 }
 
+#extensionConnectionProfilesStatus~.null-icon {
+    visibility: hidden;
+}
+
 #extensionConnectionProfilesIcon,
 #extensionConnectionProfilesStatus~.icon-svg {
     opacity: 0.8;
